# leptos-huya

./: .env  .gitignore  .ignore  Cargo.toml  README.md  diesel.toml  leptosfmt.toml  package-lock.json  package.json  tasks.toml  test.db.toml
.cargo/: config.toml
app/: Cargo.toml
app/public/imgs/cates/: deepseek_bash_20250821_310639.sh  image_data.txt
app/public/imgs/login/: index_z_77d2ac7.png:Zone.Identifier
app/public/imgs/user/: 2fdcec4703d34de2459e7211d89878_180_135.jpg:Zone.Identifier
app/public/nextStatic/js/player/3.8.7/: auto-play-tips.d18bd4.js  danmu-socket.f84351.js  equalizer.b9524f.js  feedback.869085.js  gift-bar.81ec6e.js  payment.dd3ee9.js  qie-flv.746a49.js  qie-las.efa857.js  qie.player.js  qualities-popup.3576d0.js
app/src/: app.module.scss  app.rs  components.rs  lib.rs  main.rs  pages.rs
app/src/components/: carousel.module.scss  carousel.rs  footer.module.scss  footer.rs  header.module.scss  header.rs  hot_match.module.scss  hot_match.rs  left_nav.module.scss  left_nav.rs  login.module.scss  login.rs  player.module.scss  player.rs  sider.module.scss  sider.rs  zcode.module.scss  zcode.rs
app/src/pages/: cate_page.module.scss  cate_page.rs  game.module.scss  game.rs  home_page.module.scss  home_page.rs  info_page.module.scss  info_page.rs  live_page.rs  match_page.module.scss  match_page.rs  not_found.module.scss  not_found.rs  user.module.scss  user.rs  video.module.scss  video.rs  video_page.module.scss  video_page.rs
app/src/pages/game/: banner.module.scss  banner.rs  hot_game.module.scss  hot_game.rs  recommend_game.module.scss  recommend_game.rs  rest_game.module.scss  rest_game.rs
app/src/pages/home_page/: cate_room.module.scss  cate_rooms.rs  home_recommend_room.module.scss  home_recommend_room.rs  hot_cate.module.scss  hot_cate.rs  hot_news.module.scss  hot_news.rs  playbill.module.scss  playbill.rs
database/: Cargo.toml  readme.md
database/data/: cates.txt  vods-api.json
database/migrations/2025-07-15-083744_create_rooms/: down.sql  up.sql
database/migrations/2025-08-18-104452_create_token/: up.sql
database/migrations/2025-08-18-140107_add_phone_and_pwd/: down.sql  up.sql
database/migrations/2025-08-22-073247_create_sim_cate/: down.sql  up.sql
database/migrations/2025-08-27-092055_create_vod/: down.sql  up.sql
database/src/: lib.rs  main.rs  models.rs  schema.rs  utils.rs
database/src/models/: cate.rs  room.rs  room_tag.rs  sim_cate.rs  tag.rs  token.rs  user.rs  vod_cate.rs  vods.rs
database/src/utils/: categories.rs  rooms.rs  rooms_tags.rs  sim_cate.rs  tags.rs  tokens.rd  tokens.rs  users.rs  vod_page.rs
dbs/: database.db  database_test.db
mock_rust/: Cargo.toml
mock_rust/src/: lib.rs  main.rs  mock.rs  model.rs
models/: Cargo.toml
models/src/: lib.rs  main.rs
public/css/: normalize.css
public/fe/api/: emotions
public/nextStatic/js/: mock.min.js
public/nextStatic/js/player/3.8.7/: copy-right.5757ed.js  danmu-render.67c600.js  effects-popup.54279c.js  md5.3d5a65.js  plugin-banner.050fdf.js  plugin-effects.d0e953.js  plugin-stats.8e7753.js  qie-hls.3e821b.js  qie-menu.1146cf.js  recommend-vod.442aff.js  recommend.302cae.js  screen-entries.85d671.js  settings-popup.4ce2e2.js  speed-popup.ed09b5.js  video-stats.bffdd8.js  violation.879940.js
server/src/: fileserv.rs
src/: app.rs  lib.rs  main.rs
src/app/: components.rs  pages.rs
src/app/components/: carousel.rs  footer.rs  header.rs  hot_match.rs  left_nav.rs  player.rs  sider.rs
src/app/pages/: game.rs  home_page.rs  info_page.rs  match_page.rs  not_found.rs  user.rs  video.rs
src/app/pages/home_page/: cate_rooms.rs  home_recommend_room.rs  hot_cate.rs  hot_news.rs  playbill.rs
style/: main.scss  tailwind.css
web_db/: Cargo.toml
web_db/migrations/2025-08-09-025548_create_posts/: up.sql
web_db/src/: lib.rs  main.rs  models.rs
