[workspace]
members = [
    "app",
    "database",
    "models",
    "web_db",
]
resolver = "2"

[workspace.dependencies]
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"
cfg_block = "0.2.0"
chrono = "0.4.41"
hex = "0.4.3"
tokio = {version="1.45.0", features=["rt-multi-thread", "macros"]}

web_db = { path = "./web_db" }
models = { path = "./models" }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true
