[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
cfg_block.workspace = true
chrono.workspace = true
axum = {workspace = true, optional = true}
tokio = {workspace = true, optional = true}
wasm-bindgen =  { workspace = true, optional = true }
web_db = {workspace=true, optional = true}

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
stylance.workspace = true

gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
js-sys = { version = "0.3.77", optional=true }
web-sys = { version = "0.3.77", features = ["NodeList"] }
leptos-use = {version = "0.16.2", optional = true}

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "dep:wasm-bindgen",
    "dep:leptos-use",
    "dep:gloo-timers",
    "dep:js-sys",
]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:axum", "dep:tokio", "dep:web_db"]

[package.metadata.stylance]
output_file = "../style/main.scss"
output_dir = "../style/"
