[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.9" }
leptos_router = { version = "0.8.7" }
axum = { version = "0.8.4", optional = true }
axum-extra = { version = "0.10.1", optional = true, features=["cookie"] }
console_error_panic_hook = { version = "0.1", optional = true }
time = { version = "0.3.41", optional = true}
leptos_axum = { version = "0.8.6", optional = true }
leptos_meta = { version = "0.8.5" }
tokio = { workspace = true, optional = true}
wasm-bindgen = { version = "=0.2.103", optional = true }
serde.workspace = true
serde_json.workspace = true
cfg_block.workspace = true
chrono.workspace = true
gloo-timers = { version = "0.3.0", features = ["futures"], optional = true }
stylance = "0.7.0"
reactive_stores = "0.2.5"
js-sys = { version = "0.3.77", optional=true }
web-sys = { version = "0.3.77", features = ["NodeList"] }
leptos-use = {version = "0.16.2", optional = true, features=["use_cookie"]}

models.workspace = true
database = { workspace=true, optional = true}

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:leptos-use",
    "dep:js-sys",
    "dep:gloo-timers",
]
ssr = [
    "dep:axum",
    "dep:axum-extra",
    "dep:time",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:database"
]

[package.metadata.leptos]
output-name = "huya-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001

browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[package.metadata.stylance]
output_file = "style/main.scss"
output_dir = "style/"
