[package]
name = "huya_database"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
