[package]
name = "huya_database"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
diesel = { version = "2.2.12", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "serde_json", "chrono"] }
chrono.workspace = true
dotenvy = "0.15.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
hex.workspace = true
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
